# flow-bot

./: .gitignore  Cargo.toml
examples/: simple.rs
flow-bot-macros/: Cargo.toml
flow-bot-macros/src/: lib.rs
src/: error.rs  lib.rs
src/api/: api_ext.rs  api_impl.rs  mod.rs
src/base/: connect.rs  context.rs  extract.rs  handler.rs  mod.rs  service.rs
src/event/: message.rs  meta_event.rs  mod.rs  notice.rs  request.rs
src/extensions/: mod.rs  turso.rs
src/message/: message_ext.rs  mod.rs  segments.rs
