[package]
name = "flow-bot"
version = "0.2.0"
edition = "2024"
authors = ["KevinT3Hu"]
description = "An onebot-11 SDK that simplifies bot creation."
repository = "https://github.com/KevinT3Hu/flow-bot.git"
license = "AGPL-3.0-only"

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "sync", "time"] }
tokio-tungstenite = "0.27.0"
tracing = "0.1.41"
uuid = { version = "1.14.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt"] }
