[package]
name = "flow-bot"
version = "0.2.3"
edition = "2024"
authors = ["KevinT3Hu"]
description = "An onebot-11 SDK that simplifies bot creation."
repository = "https://github.com/KevinT3Hu/flow-bot.git"
license = "AGPL-3.0-only"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.54", features = ["derive"], optional = true }
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt"] }

[features]
command = ["clap/derive"]
default = ["command"]
