[package]
name = "flow-bot-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for Flow Bot"
license = "AGPL-3.0-only"
repository = "https://github.com/KevinT3Hu/flow-bot.git"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.114", features = ["full"] }
